--- a/css/main.css
+++ b/css/main.css
@@ -152,11 +152,18 @@ Menu
 #menu {
     background-color: #fcfbf5;
 }
+#menu h3 {
+  margin-bottom: 40px;
+}
 .special-items img {
   width: 100%;
 }
+.special-items .img-wrapper {
+  overflow: hidden;
+}
 .special-items .item-wrapper {
   position: relative;
+  overflow: hidden;
 }
 .special-items .item-wrapper:after {
   content: '';
@@ -203,9 +210,14 @@ Menu
 Media queries
 ==============================================
 */
-@media only screen and (min-width:320px) and (max-width: 900px)  {
+@media only screen and (min-width:320px) and (max-width: 900px) {
   header {
     height: 620px;
+  }
+}
+@media only screen and (min-width:768px) and (max-width: 991px) {
+  .special-items .img-wrapper, .special-items .item-wrapper {
+    max-height: 250px;
   }
 }
 
@@ -224,6 +236,9 @@ Media queries
 @media only screen and (max-width: 767px) {
   .navbar-default {
   background-color: #27333e;
+  }
+  .special-items .item-wrapper {
+    max-height: 300px;
   }
 }
 @media only screen and (max-width: 991px) {
