--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,9 @@ body {
 h1, h2, h4 {
   font-family: 'Lora', serif;
 }
+h2, h3 {
+  margin-bottom: 30px;
+}
 h3 {
   font-weight: 200;
 }
@@ -146,14 +149,15 @@ About section
 
 /*
 ==============================================
-Menu
+Menu section
 ==============================================
 */
 #menu {
     background-color: #fcfbf5;
 }
-#menu h3 {
-  margin-bottom: 40px;
+.special-items {
+  margin-top: 30px;
+  margin-bottom: 50px;
 }
 .special-items img {
   width: 100%;
@@ -203,6 +207,48 @@ Menu
 .special-items .item-wrapper .text p {
   opacity: 0.6;
 }
+#full-menu {
+    background-image: url(../img/menu-bg_2.jpg);
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    background-size: cover;
+    color: #fff;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    min-height: 500px;
+}
+#full-menu a {
+    color: #fff;
+}
+#full-menu .nav-pills > li.active > a,
+#full-menu .nav-pills > li.active > a:hover,
+#full-menu .nav-pills > li.active > a:focus,
+#full-menu .nav > li > a:hover,
+#full-menu .nav > li > a:focus {
+  background: none;
+}
+#full-menu .nav-pills > li.active > a,
+#full-menu .nav-pills > li.active > a:hover,
+#full-menu .nav-pills > li.active > a:focus {
+  color: #C7A75B;
+}
+#menu-tabs {
+  margin-bottom: 30px;
+  font-size: 18px;
+}
+#menu-tabs ul {
+  display: inline-block;
+}
+.left-menu-items {
+    border-right: 1px solid rgba(255, 255, 255, 0.4);
+}
+.menu-item .item-name h4 {
+    margin-bottom: 10px;
+    margin-top: 30px;
+}
+.menu-item .item-details .item-price {
+    color: #cb9f6b;
+}
 
 
 /*
@@ -240,6 +286,9 @@ Media queries
   .special-items .item-wrapper {
     max-height: 300px;
   }
+  .menu-item .item-name h4, .menu-item .item-details p {
+    text-align: center;
+  }
 }
 @media only screen and (max-width: 991px) {
   section {
@@ -255,5 +304,9 @@ Media queries
   .about-page-right img {
     width: 90%;
     left: 0;
+  }
+  .special-items .item-wrapper .text {
+    font-size: 13px;
+    padding: 10%;
   }
 }
