--- a/css/main.css
+++ b/css/main.css
@@ -20,8 +20,8 @@ h3 {
   font-weight: 200;
 }
 section {
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 section p {
   text-align: justify;
@@ -62,8 +62,8 @@ Navbar styling
   border-color: rgba(34, 34, 34, 0.05);
 }
 .navbar-brand img {
-  width: 100px;
-  top: 5px;
+  width: 130px;
+  top: 10px;
   position: absolute;
 }
 
@@ -215,7 +215,7 @@ Menu section
     color: #fff;
     padding-top: 50px;
     padding-bottom: 50px;
-    min-height: 500px;
+    min-height: 611px;
 }
 #full-menu a {
     color: #fff;
@@ -249,6 +249,49 @@ Menu section
 .menu-item .item-details .item-price {
     color: #cb9f6b;
 }
+.menu-button {
+  padding-top: 40px;
+}
+.menu-button a {
+  border: 1px solid #000;
+  border-radius: 5px;
+  padding: 10px;
+  color: #000;
+}
+
+
+/*
+==============================================
+Gallery section
+==============================================
+*/
+.img-responsive,
+.thumbnail > img,
+.thumbnail a > img,
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+  display: block;
+  /*width: 100%;*/
+  height: auto;
+}
+.carousel-inner > .item > img {
+  margin: 0 auto;
+}
+.carousel-control.left,
+.carousel-control.right {
+  background-image: none;
+}
+.carousel-control i {
+  top: 50%;
+  position: absolute;
+  color: #C7A75B;
+}
+.carousel-control.left i {
+  left: 80%;
+}
+.carousel-control.right i {
+  right: 80%;
+}
 
 
 /*
@@ -270,6 +313,9 @@ Media queries
 @media only screen and (min-width:1200px) {
   .about-page-left {
     background: url(../img/about-bg_2.jpg);
+  }
+  .special-items .item-wrapper .text {
+    font-size: 12px;
   }
 }
 
