Added reservation section.

--- a/css/main.css
+++ b/css/main.css
@@ -296,6 +296,45 @@ Gallery section
 
 /*
 ==============================================
+Reservation section
+==============================================
+*/
+#reservation {
+  background-color: #272727;
+}
+#reservation h2 {
+  color: #fff;
+}
+.form-control {
+  margin-bottom: 15px;
+  background: transparent;
+  border-radius: 0;
+  border: 1px solid #ffffff;
+}
+.icon-box {
+  position: relative;
+}
+.icon-box i {
+  position: absolute;
+  right: 20px;
+  padding: 9px 12px;
+  color: #fff;
+  font-size: 16px;
+}
+.book-now-btn {
+  border: none;
+  color: #fff;
+  padding: 12px 0;
+  width: 100%;
+  background: #C7A75B;
+  text-transform: uppercase;
+  font-size: 16px;
+}
+input.form-control, textarea.form-control {
+  color: #fff;
+}
+/*
+==============================================
 Media queries
 ==============================================
 */
